# haptic_teleoperation

./: CMakeLists.txt  CMakeLists.txt~  README.md  package.xml  package.xml~
cfg/: ForceField.cfg  ForceField.cfg~  MasterController.cfg  MasterController.cfg~  PIDController.cfg  PIDController.cfg~  SlaveController.cfg  SlaveController.cfg~  master.cfg  master.cfg~  potential_field.cfg  prf_feedback_force.cfg  slave.cfg  slave.cfg~
config/: box.world  force_field_params.yaml  master_controller_params.yaml  master_controller_params.yaml~  master_controller_params_ground.yaml  master_params.yaml  master_params.yaml~  my_mesh.world  params.yaml  pid_params.yaml  pid_params.yaml~  potential_field.yaml  potential_field.yaml~  real_ex.world  slave_controller_params.yaml  slave_controller_params.yaml~  slave_controller_params_ground.yaml  slave_params.yaml  slave_params.yaml~  slave_params_mav.yaml  static_obs.world  test_pf.world  test_pf_back.world  tube.world  world2.sdf
config/packup/: master_controller_params (copy).yaml
include/haptic_teleoperation/: Controller.h  ForceField.h  MasterController.h  SlaveController.h  VirtualForceBrf.h  VirtualForcePrf.h  VirtualImpedanceForce.h
include/navigation/: Controller.h  Controller.h~  MasterController.h  MasterController.h~  SlaveController.h  SlaveController.h~
launch/: Final_Shared.launch  GVteleop.launch  RosAria_teleop.launch  ardrone.launch  ardrone_Impedance.launch  ardrone_Impedance_auto.launch  ardrone_potential_auto.launch  ardrone_sim.launch  ardrone_simulation.launch  box.launch  final.launch  final.launch~  final_shared.launch  force_field.launch  goal.launch  haptic_navigation.launch  haptic_navigation.launch~  haptic_navigation_pioneer.launch  haptic_navigation_pioneer_hokuyo.launch  haptic_navigation_pioneer_sonar.launch  haptic_navigation_potential_field.launch  haptic_navigation_potential_field.launch~  haptic_navigation_potential_field_pioneer.launch  keyboard_teleop.launch  laser2point_ardrone.launch  mavteleop.launch  pid_position_control.launch  position_control.launch  position_control.launch~  prf_haptic_navigation_pioneer_hokuyo.launch  rolling_landscape_120m.launch  rosaria_nav.launch~  start.launch  tf_world_odom.launch  tomap.launch  virtual_environment_model_state.launch  virtual_environment_model_state.launch~  walls.launch
matlab/: Traking.fig  drawing_map.m  mapping_test.m  markers.m  parser.m  reading_obstacles.m  test_arrow.m  validate.m
meshes/: new_top_plate.stl
msg/: ContourData.msg  TwistArray.msg  matlab_data_force.msg
params/: haptic_navigation_params.yaml~  haptic_teleop_params.yaml~  master_params.yaml~  slave_params.yaml~
rviz/: ardron_sim.rviz  ardrone_simulation.rviz  config.rviz
src/: Controller.cpp  Controller.cpp~  ControllerRos.cpp  ForceField.cpp  MasterController.cpp  MasterSide.cpp~  ModelState.cpp  PositionController.cpp  SlaveController.cpp  SlaveController.cpp_pid  VirtualForceBrf.cpp  VirtualForcePrf.cpp  VirtualImpedanceForce.cpp  ardrone_keyboard.cpp  collecting_all_data.cpp  collisionDetecctionGV.cpp  controller.cpp_back  createOctmap.cpp  feedback_force.cpp  force_field.cpp  force_field_auto.cpp  laser2PC2.cpp  laser2pointcloud.cpp  node.cpp  nodeBrf.cpp  nodePrf.cpp  nodeVI.cpp  potential_field.cpp  potential_field.cpp_old  potential_field_auto.cpp  potential_field_old.cpp  robotteleop_keyboard.cpp  rosaria_interface.cpp~  rosaria_interface_test.cpp~  slave_controller.cpp~  teste.cpp~  testing_pf.cpp  uav_commander.cpp
