<?xml version="1.0"?>
<package>
  <name>navigation</name>
  <version>0.0.0</version>
  <description>KURI's navigation package</description>
  <maintainer email="rui.defigueiredo@kustar.ac.ae">Rui Pimentel de Figueiredo and Reem Ashour</maintainer>
  <license>GPLv2</license>
  <author email="rui.defigueiredo@kustar.ac.ae">Rui Pimentel de Figueiredo and Reem Ashour</author>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>phantom_omni</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>phantom_omni</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>message_runtime</run_depend>
</package>
