<?xml version="1.0"?>
<package>
  <name>haptic_teleoperation</name>
  <version>0.0.0</version>
  <description>KURI's haptic_teleoperation package</description>
  <maintainer email="rui.defigueiredo@kustar.ac.ae">Rui Pimentel de Figueiredo and Reem Ashour</maintainer>
  <license>GPLv2</license>
  <author email="rui.defigueiredo@kustar.ac.ae">Rui Pimentel de Figueiredo and Reem Ashour</author>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>phantom_omni</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>laser_geometry</build_depend>
  <build_depend>gazebo_msgs</build_depend>
  <build_depend>ardrone_autonomy</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>fcl</build_depend>
  <build_depend>octomap</build_depend>
 <build_depend>pcl_ros</build_depend>
<build_depend>cmake_modules</build_depend>
  
 <run_depend>cmake_modules</run_depend>
  <run_depend>octomap</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>phantom_omni</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>laser_geometry</run_depend>
  <run_depend>gazebo_msgs</run_depend>
  <run_depend>ardrone_autonomy</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>fcl</run_depend>
 <run_depend>pcl_ros</run_depend>

</package>
